[package]
name = "kurt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kurt"
path = "bin/main.rs"

[workspace]

[features]

[dependencies]
compiler = { path = "src/compiler" }
diagnostic = { path = "src/diagnostic" }
runtime = { path = "src/runtime" }
syntax = { path = "src/syntax" }

[dependencies.clap]
version = "3.1.1"
features = ["suggestions", "color", "wrap_help", "derive"]

[dependencies.rustyline]
version = "9.1.0"
