[package]
name = "kurt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kurt"
path = "bin/main.rs"

[workspace]

[features]
gc_trace = ["runtime/gc_trace"]
trace = ["runtime/trace"]

[dependencies]
common = { path = "src/common" }
compiler = { path = "src/compiler" }
diagnostic = { path = "src/diagnostic" }
runtime = { path = "src/runtime" }
syntax = { path = "src/syntax" }

[dependencies.clap]
version = "3.1.1"
features = ["suggestions", "color", "wrap_help", "derive"]
