[package]
name = "diagnostic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
hyphenation = "0.8"
termcolor = "1.1"
term_size = "0.3"
unicode-width = "0.1"
textwrap = { version = "0.15", features = ["hyphenation"] }
